--- a/tt.html
+++ b/tt.html
@@ -1,7 +1,364 @@
-<div class="m-list-timeline__item">
-    <span class="m-list-timeline__badge m-list-timeline__badge--success"></span>
-    <span class="m-list-timeline__text">
-        <a href="#000001011804_MOLDING" class="m-link">#000001011804_MOLDING => PRESS31 </a>
-    </span>
-    <span class="m-list-timeline__time">3 days ago</span>
+<!DOCTYPE HTML>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js"
+            integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="
+            crossorigin="anonymous"></script>
+
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
+    <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap/0.30.5/react-bootstrap.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+
+    <style>
+        .vertical-align {
+            display: flex;
+            align-items: baseline;
+        }
+
+        .vertical-align .top {
+            align-self: baseline;
+        }
+
+        .vertical-align .center {
+            align-self: center;
+        }
+
+        .available {
+            color: green;
+            font-weight: bold;
+        }
+
+        .discontinued {
+            color: red;
+            font-weight: bold;
+        }
+    </style>
+    <script type="text/babel">
+
+    </script>
+
+    <script type="text/babel">
+        var FormGroup = ReactBootstrap.FormGroup;
+        var Label = ReactBootstrap.ControlLabel;
+        var Input = ReactBootstrap.FormControl;
+        var Static = ReactBootstrap.FormControl.Static;
+        var Button = ReactBootstrap.Button;
+
+        var FilterEntryBox = React.createClass({
+            getInitialState: function () {
+                return {
+                    filterText: "",
+                }
+            },
+            onTextChange: function (event) {
+                this.setState({filterText: event.target.value});
+                this.props.callback(event.target.value);
+            },
+            render: function () {
+                return (
+                    <Input type="text"
+                           value={this.state.filterText}
+                           placeholder="Filter Product Name"
+                           onChange={this.onTextChange}/>
+                )
+            }
+        });
+
+        var CategoryDisplay = React.createClass({
+            getInitialState: function () {
+                return {
+                    categoryCache: [],
+                    loaded: false,
+                };
+            },
+            componentDidMount: function () {
+                var odataUrl = "/Northwind/V3/Northwind/Northwind.svc/";
+
+                $.ajax({
+                    url: odataUrl + "Categories",
+                    dataType: 'json',
+                    cache: false
+                })
+                    .done(function (data, textStatus, jqXHR) {
+                            this.setState({
+                                categoryCache: data.value,
+                                loaded: true,
+                            });
+                        }.bind(this)
+                    )
+                    .fail(function (jqXHR, textStatus, errorThrown) {
+                        console.log("Error", jqXHR, textStatus, errorThrown);
+                        alert("An arror occurred while retrieving the category list from the server: " + textStatus);
+                    });
+            },
+            findRow: function (id) {
+                var result = $.grep(this.state.categoryCache, function (e) {
+                    return e.CategoryID == id;
+                });
+                if (result.length > 0) return result[0].CategoryName;
+                else return null;
+            },
+            render: function () {
+                return (
+                    <span>
+                    	{this.state.loaded ? this.findRow(this.props.id) : "...loading..."}
+                    </span>
+                )
+            }
+        })
+
+        var AvailableDisplay = React.createClass({
+            render: function () {
+                return (
+                    <span className={this.props.value ? "discontinued" : "available"}>
+                    	{this.props.value ? "Discontinued" : "Available"}
+                    </span>
+                )
+            }
+        });
+
+        var CurrencyDisplay = React.createClass({
+            render: function () {
+                var computedPrice = new Number(this.props.value);
+                computedPrice = Math.round(computedPrice * 100) / 100;
+                computedPrice = computedPrice.toFixed(2).toLocaleString();
+
+                return (
+                    <span>
+                    	{computedPrice}
+                        <small className="text-muted"> EUR</small>
+                    </span>
+                )
+            }
+        });
+
+        var ModalProductDetail = React.createClass({
+            getInitialState: function () {
+                return {
+                    OrderCount: "",
+                    orderSubmitted: false,
+                }
+            },
+            onOrderChange: function (event) {
+                this.setState({OrderCount: event.target.value});
+            },
+            onSaveClick: function () {
+                this.setState({
+                    orderSubmitted: true,
+                });
+
+                setTimeout(this.closeAndReset, 2000);
+            },
+            closeAndReset: function () {
+                $('#product-detail').modal('hide');
+                this.setState({
+                    orderSubmitted: false,
+                    OrderCount: "",
+                });
+            },
+            render: function () {
+                return (
+                    <div className="modal fade" tabIndex="-1" role="dialog" id="product-detail">
+                        <div className="modal-dialog modal-lg" role="document">
+                            <div className="modal-content">
+                                <div className="modal-header">
+                                    <h4 className="modal-title">Product Details - {this.props.row.ProductName}</h4>
+                                </div>
+                                <div className="modal-body">
+                                    {this.state.orderSubmitted ? <div className="alert alert-success" role="alert">
+                                        <strong>Success!</strong>&nbsp;
+                                        {this.state.OrderCount} units of {this.props.row.ProductName} have been ordered.
+                                    </div> : null}
+                                    <form className="form-horizontal">
+                                        <FormGroup>
+                                            <Label className="col-sm-3">Product Name</Label>
+                                            <Static className="col-sm-9">{this.props.row.ProductName}</Static>
+                                        </FormGroup>
+                                        <FormGroup>
+                                            <Label className="col-sm-3">Unit Price</Label>
+                                            <Static className="col-sm-9">
+                                                <CurrencyDisplay value={this.props.row.UnitPrice}/>
+                                            </Static>
+                                        </FormGroup>
+                                        <FormGroup>
+                                            <Label className="col-sm-3">Status</Label>
+                                            <Static className="col-sm-9">
+                                                <AvailableDisplay value={this.props.row.Discontinued}/>
+                                            </Static>
+                                        </FormGroup>
+                                        <FormGroup>
+                                            <Label className="col-sm-3">Category</Label>
+                                            <Static className="col-sm-9">
+                                                <CategoryDisplay id={this.props.row.CategoryID}/>
+                                            </Static>
+                                        </FormGroup>
+                                        <FormGroup>
+                                            <Label className="col-sm-3">Units In Stock</Label>
+                                            <Static className="col-sm-9">{this.props.row.UnitsInStock}</Static>
+                                        </FormGroup>
+                                        <FormGroup>
+                                            <Label className="col-sm-3">Order Amount</Label>
+                                            <div className="col-sm-6">
+                                                <Input type="number"
+                                                       value={this.state.OrderCount}
+                                                       placeholder="Number of units to order"
+                                                       onChange={this.onOrderChange}
+                                                       disabled={this.state.orderSubmitted}/>
+                                            </div>
+                                        </FormGroup>
+                                    </form>
+                                </div>
+                                <div className="modal-footer">
+                                    <Button bsStyle="primary" onClick={this.onSaveClick}
+                                            disabled={this.state.OrderCount == "" || this.state.orderSubmitted}>Save</Button>
+                                    <Button onClick={this.closeAndReset}>Close</Button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                )
+            }
+        });
+
+        var TitleBar = React.createClass({
+            render: function () {
+                return (
+                    <nav className="navbar navbar-default navbar-fixed-top">
+                        <div className="container">
+                            <div className="navbar-header">
+                                <div className="navbar-brand">Product Overview</div>
+                            </div>
+
+                            <ul className="nav navbar-nav navbar-right">
+                                <li className="navbar-form form-group">
+                                    <FilterEntryBox callback={this.props.filterCallback}/>
+                                </li>
+                                <li>
+                                    <p className="navbar-text">Items: {this.props.count}</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
+                )
+            }
+        });
+
+        var ListBox = React.createClass({
+            render: function () {
+                return (
+                    <button type="button" className="list-group-item" id="product-list"
+                            onClick={this.props.clickEvent}>
+                        <div className="row vertical-align">
+                            <div className="col-sm-8 top">
+                                <h4>{this.props.row.ProductName}</h4>
+                                <p> {this.props.row.QuantityPerUnit}</p>
+                            </div>
+                            <div className="col-sm-3 text-right top">
+                                <h4>
+                                    <CurrencyDisplay value={this.props.row.UnitPrice}/>
+                                </h4>
+                                <AvailableDisplay value={this.props.row.Discontinued}/>
+                            </div>
+                            <div className="col-sm-1 center">
+                                <span className="glyphicon glyphicon-chevron-right pull-right"
+                                      aria-hidden="true"></span>
+                            </div>
+                        </div>
+                    </button>
+                );
+            }
+        });
+
+        var ProductList = React.createClass({
+            getInitialState: function () {
+                return {
+                    products: [],
+                    origProducts: [],
+                    selectedRow: null,
+                };
+            },
+            onListBoxClick: function (row) {
+                this.setState({selectedRow: row});
+
+                setTimeout(function () {
+                    $('#product-detail').modal("show");
+                });
+            },
+            componentDidMount: function () {
+                var odataUrl = "/Northwind/V3/Northwind/Northwind.svc/";
+
+                $.ajax({
+                    url: odataUrl + "Products",
+                    dataType: 'json',
+                    cache: false
+                })
+                    .done(function (data, textStatus, jqXHR) {
+                            this.setState({
+                                products: data.value,
+                                origProducts: data.value,
+                            })
+                        }.bind(this)
+                    )
+                    .fail(function (jqXHR, textStatus, errorThrown) {
+                        console.log("Error", jqXHR, textStatus, errorThrown);
+                        alert("An arror occurred while retrieving data from the server: " + textStatus);
+                    });
+            },
+            titleBarFilter: function (text) {
+                if (text.trim().length > 0) {
+                    var newList = this.state.origProducts.filter(function (row) {
+                        return row.ProductName && row.ProductName.toLowerCase().indexOf(text) >= 0;
+                    });
+                    this.setState({products: newList});
+                }
+                else {
+                    this.setState({products: this.state.origProducts});
+                }
+            },
+            render: function () {
+                var productListBoxes = this.state.products.map(function (row) {
+                    return (
+                        <ListBox row={row} key={row.ProductName}
+                                 clickEvent={this.onListBoxClick.bind(this, row)}/>
+                    );
+                }.bind(this))
+
+                return (
+                    <div>
+                        <TitleBar count={this.state.products.length} filterCallback={this.titleBarFilter}/>
+                        <div className="list-group">
+                            {productListBoxes}
+                        </div>
+                        {this.state.selectedRow == null ? null :
+                            <ModalProductDetail row={this.state.selectedRow}/>}
+                    </div>
+                )
+            }
+        });
+
+        ReactDOM.render(
+            <ProductList/>,
+            document.getElementById('product-list')
+        );
+    </script>
+</head>
+
+<body>
+
+<div class="container">
+    <div id="product-list"></div>
 </div>
+
+</body>
+</html>
